@@ -15,28 +15,28 @@ import java.util.*;
 public class Main {
 
 
-    public static long SERVER_ID = 1196782142739447858L;
     //TESTING :
-    //public static long SERVER_ID =1209564843775098991L;
+    //public static long SERVER_ID = 1196782142739447858L;
+  public static long SERVER_ID =1209564843775098991L;
 
-    public static List<Long> ANNOUNCE_CHANNEL_IDS = Arrays.asList(1196782376269918299L,1277779555196862551L);
     //TESTING :
-    //public static List<Long> ANNOUNCE_CHANNEL_IDS = Arrays.asList(1209564850142056531L);
+    //public static List<Long> ANNOUNCE_CHANNEL_IDS = Arrays.asList(1196782376269918299L,1277779555196862551L);
+    public static List<Long> ANNOUNCE_CHANNEL_IDS = Arrays.asList(1209564850142056531L);
 
-    public static long LOGS_CHANNEL_ID = 1201545255024087161L;
     //TESTING :
-    //public static long LOGS_CHANNEL_ID = 1209580226024317008L;
+    //public static long LOGS_CHANNEL_ID = 1201545255024087161L;
+    public static long LOGS_CHANNEL_ID = 1209580226024317008L;
     public static List<Long> WHITELISTED_IDS = Arrays.asList(262674203931574273L, 191213751746166785L);
     public static long HOST_ROLE_ID = 1272542290967003218L;
 
+   public static long BOT_ID = 1211273034686791741L;
     //TESTING :
-    //public static long BOT_ID = 1211273034686791741L;
-    public static long BOT_ID = 1209564326902366249L;
-
-  public static List<Long> ROLES_TO_PING = List.of(1209253560445960243L);
+    //public static long BOT_ID = 1209564326902366249L;
 
     //TESTING :
-    //public static List<Long> ROLES_TO_PING = Arrays.asList(1209593119675387974L);
+    //public static List<Long> ROLES_TO_PING = List.of(1209253560445960243L);
+
+   public static List<Long> ROLES_TO_PING = Arrays.asList(1209593119675387974L);
 
     public static List<Long> PARTICIPANTS = new ArrayList<>();
     public static void main(String[] args) {
@@ -60,8 +60,7 @@ public class Main {
         jda.updateCommands().addCommands(
                 Commands.slash("annonce", "Annoncer une partie d'UHC")
                         .setGuildOnly(true)
-                        .addOption(OptionType.STRING, "date", "La date de l'UHC", true)
-                        .addOption(OptionType.STRING, "horaire", "L'heure de l'UHC", true)
+                        .addOption(OptionType.STRING, "date", "La date de l'UHC : LA DATE DOIT ÊTRE FORMATÉE DE LA SORTE : dd-MM-yyyy HH:mm", true)
                         .addOption(OptionType.STRING, "slots", "Le nombre de slots maximum", true)
                         .addOption(OptionType.STRING, "mdj", "Le mode de jeu", true)
                         .addOption(OptionType.STRING, "description", "Informations sur la partie", true),
@@ -74,7 +73,7 @@ public class Main {
 
         ).queue();
 
-        jda.addEventListener(new AnnonceCommand(jda), new LinkCommand(), new ParticipantsCommand(), new ReactionListener(jda), new MessageListener());
+        jda.addEventListener(new AnnonceCommand(jda), new LinkCommand(), new ParticipantsCommand(jda), new ReactionListener(jda), new MessageListener());
 
 
     }
